<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/rl_content_container"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/dp_15">
	
	<LinearLayout
		android:id="@+id/ll_content_container"
		android:layout_width="@dimen/dp_275"
		android:layout_height="@dimen/dp_275"
		android:layout_marginTop="@dimen/dp_130"
		android:layout_centerHorizontal="true"
		android:background="@drawable/bg_share_cancel">
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_41"
			android:layout_marginLeft="@dimen/dp_42"
			android:layout_marginRight="@dimen/dp_42"
			android:layout_marginBottom="@dimen/dp_44"
			android:src="@drawable/ic_share_cancel"/>
	</LinearLayout>

	<TextView
		android:layout_below="@id/ll_content_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal|center|center_vertical"
		android:text="@string/confirm_cancel_share"
		android:textColor="@color/C_FF_FF_FF"
		android:layout_marginTop="@dimen/dp_15"
		android:textSize="@dimen/sp_16"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical">
		<TextView
			android:id="@+id/txt_confirm"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dp_44"
			android:background="@drawable/button_confirm"
			android:gravity="center"
			android:text="@string/confirm"
			android:textColor="@color/C_FF_FF_FF"
			android:textSize="@dimen/sp_14"/>

		<TextView
			android:id="@+id/txt_cancel"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dp_44"
			android:background="@drawable/button_cancel"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center"
			android:text="@string/cancel"
			android:textColor="@color/C_FF_FF_FF"
			android:textSize="@dimen/sp_14"/>
	</LinearLayout>

</RelativeLayout>
