<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogLayoutTheme"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/hint"
        android:textColor="@color/dialog_title_text"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/cancel"
        android:textColor="@color/dialog_message_text"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@drawable/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_dialog_button_left_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/dialog_button_text"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_0.5"
            android:layout_height="match_parent"
            android:background="@drawable/divider" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_dialog_button_right_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/dialog_button_text2"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</LinearLayout>