<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/dp_15" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="@dimen/dp_130"
		android:orientation="vertical">
		<ImageView
			android:layout_width="@dimen/dp_224"
			android:layout_height="@dimen/dp_224"
			android:layout_gravity="center_vertical|center"
			android:src="@drawable/ic_update_alert"/>

		<TextView
			android:id="@+id/tv_new_version"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_37"
			android:textSize="@dimen/sp_16"
			android:gravity="center|center_vertical"
			android:textColor="@color/C_FF_FF_FF" />

		<ProgressBar
			android:id="@+id/pb_download"
			style="?android:attr/progressBarStyleHorizontal"
			android:max="100"
			android:visibility="gone"
			android:minHeight="@dimen/dp_3"
			android:maxHeight="@dimen/dp_3"
			android:layout_marginTop="@dimen/dp_37"
			android:progressDrawable="@drawable/bg_progress"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dp_3" />

		<CheckBox
			android:id="@+id/cb_not_prompt"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/dp_50"
			android:text="@string/not_prompt"
			android:textColor="@color/C_FF_FF_FF"
			android:layout_gravity="center"
			android:button="@null"
			android:textSize="@dimen/sp_12"
			android:drawableRight="@drawable/selector_chx_tips"
			android:drawablePadding="@dimen/dp_15"/>



	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical">
		<Button
			android:id="@+id/btn_confirm"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dp_44"
			android:background="@drawable/button_confirm"
			android:gravity="center"
			android:text="@string/confirm"
			android:textColor="@color/C_FF_FF_FF"
			android:textSize="@dimen/sp_14"/>

		<TextView
			android:id="@+id/txt_cancel"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dp_44"
			android:background="@drawable/button_cancel"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center"
			android:text="@string/cancel"
			android:textColor="@color/C_FF_FF_FF"
			android:textSize="@dimen/sp_14"/>
	</LinearLayout>


</RelativeLayout>