<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        android:id="@+id/iv_blur"/>

    <LinearLayout
        android:id="@+id/ll_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/C_F5_F5_F5"
        android:orientation="vertical">
        <include
            layout="@layout/layout_top_toolbar"/>

        <include
            layout="@layout/divider_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:textSize="@dimen/sp_14"
                android:text="@string/description"
                android:textColor="@color/C_00_00_00"
                android:gravity="left|center|center_vertical"
                android:layout_gravity="left"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_143">

                <EditText
                    android:id="@+id/et_share_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_share_edittext"
                    android:gravity="start"
                    android:padding="@dimen/dp_15"
                    android:maxLength="30"
                    android:hint="@string/share_tips_input"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_share_content_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:padding="@dimen/dp_16"
                    android:text="0/30"
                    android:textColor="@color/C_D8_D8_D8"
                    android:textSize="@dimen/sp_12" />

            </FrameLayout>


            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_42"
                android:text="@string/share"
                android:layout_marginTop="@dimen/dp_30"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/C_FF_FF_FF"
                android:background="@drawable/bg_share_corners"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>