<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_bg_black">
    <com.kevin.crop.view.UCropView
        android:id="@+id/ucv_crop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"/>
    <RelativeLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:gravity="center_vertical"
        android:layout_gravity="top"
        android:clickable="true"
        android:background="@color/com_bg_black"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/adjust_image"
            android:drawableLeft="@drawable/ic_back"
            android:textColor="@color/com_text_white"
            android:textSize="@dimen/sp_16"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/tv_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/com_text_white"
            android:textSize="@dimen/sp_16"
            android:text="@string/use"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/dp_10"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:background="@color/com_bg_black"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_settings"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/com_text_white"
            android:textSize="@dimen/sp_16"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/dp_50" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="#D8D8D8">
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/ib_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="@dimen/dp_20"
                android:src="@drawable/ic_zoom"/>
            <SeekBar
                android:id="@+id/sb_zoom"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:progressDrawable="@drawable/bg_progress"
                android:maxHeight="@dimen/dp_3"
                android:minHeight="@dimen/dp_3"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:progress="100"
                android:max="510"
                android:thumbOffset="@dimen/dp_2"
                android:thumb="@drawable/seekbar_thumb"/>
            <TextView
                android:id="@+id/tv_zoom"
                android:layout_width="@dimen/dp_60"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="100%"
                android:textColor="@color/com_text_white"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@null"
                android:src="@drawable/ic_rotate"/>
            <SeekBar
                android:id="@+id/sb_rotate"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:progressDrawable="@drawable/bg_progress"
                android:maxHeight="@dimen/dp_3"
                android:minHeight="@dimen/dp_3"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:progress="180"
                android:max="360"
                android:thumbOffset="@dimen/dp_2"
                android:thumb="@drawable/seekbar_thumb"/>
            <TextView
                android:id="@+id/tv_rotate"
                android:layout_width="@dimen/dp_60"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="0°"
                android:textColor="@color/com_text_white"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
